welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: object java.lang.String is not a value
numcol=String
       ^